--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,44 @@
 html { 
-	height : 100% 
+	height: 100% 
 }
 
 body { 
-	height : 100%; 
-    margin : 0; 
-    padding : 0;
-    font-family : sans-serif;
+	height: 100%; 
+    margin: 0; 
+    padding: 0;
+    font-family: sans-serif;
     
 }
 
 .map {
-   height : 100%;
-    width : 100%;
+    position:absolute;
+    top: 65px;
+    right: 0;
+    left: 0;
+    bottom:0;
+  
 }
 
 form {
-    display : block;
-    background-color : #959595;
-    padding : 2px;
-    margin : 0;
-    text-align : center;
-    height : 65px;
+    display: block;
+    background-color: #999;
+    padding: 2px;
+    margin: 0;
+    text-align: center;
+    height: 65px;
 }
 
 form > label {
-    margin : 0;
-    padding : 0;
-    color : #fff;
-    font-size : 12px;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    font-size: 12px;
 } 
 
-#heading {
-    height : 65px;
+.heading {
+    height: 65px;
     padding: 14px 4px;
-    background-color : #959595;
+    background-color: #999;
+    
 }
 
